# CarnaPy

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  linux_build.sh  setup.py
.github/: Dockerfile
.github/workflows/: build.yml
conda-recipe/: build.sh
conda-recipe/carnapy/: .build.sh.swp  build.sh  meta.yaml
examples/: kalinin2018.ipynb
misc/: VERSIONS.yaml  __init__.py.in  build-conda-recipe.sh  compiler_specific.cmake  distribute_to_pypi.sh  install_local.sh  py.py
misc/conda-recipe/: bootstrap.sh  build_recipe.sh
misc/conda-recipe/carnapy.in/: build.sh  meta.yaml
src/egl/: Context.cpp
src/include/Carna/egl/: Context.h
src/include/Carna/py/: Surface.h  py.h
src/py/: Surface.cpp  base.cpp  egl.cpp  helpers.cpp  presets.cpp
test/: CMakeLists.txt  test.py  test_base.py  test_helpers.py  test_presets.py  test_py.py  test_py_demo1.py  test_py_demo2.py  test_py_demo3.py  test_py_demo4.py  test_py_demo5.py  test_tools.py
